# ipc-router

./: Cargo.toml
src/: lib.rs  router.rs  test.rs
